spring cloud code commit

--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=file:///C:/Users/Dell/git-localconfig-repo
+spring.cloud.config.server.git.uri=https://github.com/deepyank/spring-microservices/tree/master/spring-cloud-config-server/src/main/resources
