--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=https://github.com/deepyank/spring-microservices.git
+#spring.cloud.config.server.git.uri=https://github.com/deepyank/spring-microservices.git
+spring.cloud.config.server.git.uri=file:///C:/java_workspace/spring-microservices/local_repo_git
