--- a/limits-service/src/main/resources/bootstrap.properties
+++ b/limits-service/src/main/resources/bootstrap.properties
@@ -3,3 +3,4 @@ server.port=8080
 
 spring.cloud.config.uri=http://localhost:8888
 spring.profiles.active=qa
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
