--- a/springbootCRUD/pom.xml
+++ b/springbootCRUD/pom.xml
@@ -71,7 +71,10 @@
 		</dependency>
 		
 		
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 		
 	</dependencies>
 
